@@ -1,3 +1,8 @@
+2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tkFont.c: [Bug 2791352]: backported fix and tests for
+	* tests/font.test:  mis-parsing of certain font descriptions.
+
 2009-05-03  Donal K. Fellows  <dkf@users.sf.net>
 
 	* win/tkWinWm.c (UpdateWrapper): [Bug 2785744]: Manipulate flag bit
